# aoin

./: CMakeLists.txt  README.md
MultiObjOpt/: .gitignore  MultiObjOpt.sln  README.md
MultiObjOpt/Optimizer/: Optimizer.vcxproj  Optimizer.vcxproj.filters  main.cpp
MultiObjOpt/Optimizer/Optimizers/: OptimizationResult.h  Optimizer.h  OptimizerParams.h
MultiObjOpt/Optimizer/Optimizers/ConfigReader/: ConfigLines.cpp  ConfigLines.h  ConfigReader.h  (+1 more)
MultiObjOpt/Optimizer/Problems/: Problem.h  ProblemEncoding.h
MultiObjOpt/Optimizer/Program/: Program.cpp  Program.h  ProgramParams.h
MultiObjOpt/Optimizer/Utils/: DasDennis.cpp  Random.cpp  Random.h  ReadUtils.cpp  ReadUtils.h
output/GA/INVERSE_UNIFORM/: berlin52_n51_bounded-strongly-corr_01_config0_run0_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run2_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run3_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run4_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run5_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run6_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run7_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run8_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run9_GA_200_100_UniformCX_0.6_0.69_Inverse_0.35_60_archive.csv
output/GA/SWAP_SBX/: berlin52_n51_bounded-strongly-corr_01_config0_run0_GA_250_100_SBX_0.9_15_Swap_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1_GA_250_100_SBX_0.9_15_Swap_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run2_GA_250_100_SBX_0.9_15_Swap_0.35_60_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run3_GA_250_100_SBX_0.9_15_Swap_0.35_60_archive.csv  (+6 more)
output/Random/: berlin52_n51_bounded-strongly-corr_01_config0_run0_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1000_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1001_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1002_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1003_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1004_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1005_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1006_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1007_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1008_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1009_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run100_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1010_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1011_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1012_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1013_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1014_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1015_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1016_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1017_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1018_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1019_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run101_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1020_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1021_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1022_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1023_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1024_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1025_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1026_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1027_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1028_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1029_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run102_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1030_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1031_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1032_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1033_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1034_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run1035_archive.csv  (+9758 more)
output/SA/: berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_10000_0.000001_0.999_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_10000_0.000001_0.99_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_10000_0.00001_0.999_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_10000_0.001_0.999_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_10000_0.001_0.99_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.99_1000_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.99_100_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.99_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.99_250_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.99_500_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.00001_0.9_200_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.0001_0.9_1000_archive.csv  berlin52_n51_bounded-strongly-corr_01_config0_run0_SA_1000_0.001_0.999_200_archive.csv
(+116 files in other folders)
