cmake_minimum_required(VERSION 3.26)
project(MetaheuristicsRepo)

set(CMAKE_CXX_STANDARD 14)


include_directories(MultiObjOpt/Optimizer)

add_executable(MetaheuristicsRepo
        MultiObjOpt/Optimizer/Optimizers/ConfigReader/ConfigLines.cpp
        MultiObjOpt/Optimizer/Optimizers/ConfigReader/ConfigLines.h
        MultiObjOpt/Optimizer/Optimizers/ConfigReader/ConfigReader.cpp
        MultiObjOpt/Optimizer/Optimizers/ConfigReader/ConfigReader.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Clustering/NonDominatedSorting.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Clustering/NonDominatedSorting.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Individual/GeneModifier.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Individual/GeneModifier.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Individual/Individual.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Individual/Individual.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/BNTGA.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/BNTGA.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/MOEAD.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/MOEAD.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/NSGAII.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/NSGAII.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/NTGA2.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/NTGA2.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/SPEA2.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/MultiObjectiveOptimizers/SPEA2.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_SBX.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_SBX.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_TTP_OX_SX.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_TTP_OX_SX.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_UniformCX.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Crossover_UniformCX.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/CrossoverOperator.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/CrossoverOperator.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Polynomial.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Polynomial.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_RandomBit.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_RandomBit.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_TTP_Reverse_Flip.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_TTP_Reverse_Flip.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/MutationOperator.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/MutationOperator.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Operators.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Operators.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriter.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriter.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/GeneticAlgorithm.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/GeneticAlgorithm.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/AggregatedFitness.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/AggregatedFitness.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ArchiveUtils.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ArchiveUtils.h
        MultiObjOpt/Optimizer/Optimizers/OptimizationResult.h
        MultiObjOpt/Optimizer/Optimizers/Optimizer.h
        MultiObjOpt/Optimizer/Optimizers/OptimizerParams.h
        MultiObjOpt/Optimizer/Problems/DTLZ/DTLZParams.h
        MultiObjOpt/Optimizer/Problems/DTLZ/DTLZReader.cpp
        MultiObjOpt/Optimizer/Problems/DTLZ/DTLZReader.h
        MultiObjOpt/Optimizer/Problems/DTLZ/ProblemDTLZ.cpp
        MultiObjOpt/Optimizer/Problems/DTLZ/ProblemDTLZ.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/MSRCPSPReader.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/MSRCPSPReader.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/ProblemMSRCPSP_TaskAssign.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/ProblemMSRCPSP_TaskAssign.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/ProblemMSRCPSP_TaskOrdering.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/ProblemMSRCPSP_TaskOrdering.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Resource.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Resource.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Schedule.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Schedule.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Skill.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Skill.h
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Task.cpp
        MultiObjOpt/Optimizer/Problems/MSRCPSP/Task.h
        MultiObjOpt/Optimizer/Problems/TTP/ProblemTTP_CityOrderKnapBin_MO.cpp
        MultiObjOpt/Optimizer/Problems/TTP/ProblemTTP_CityOrderKnapBin_MO.h
        MultiObjOpt/Optimizer/Problems/TTP/ProblemTTP_CityOrderKnapBin_SO.cpp
        MultiObjOpt/Optimizer/Problems/TTP/ProblemTTP_CityOrderKnapBin_SO.h
        MultiObjOpt/Optimizer/Problems/TTP/TTP.cpp
        MultiObjOpt/Optimizer/Problems/TTP/TTP.h
        MultiObjOpt/Optimizer/Problems/TTP/TTPJavaEvalData.h
        MultiObjOpt/Optimizer/Problems/TTP/TTPReader.cpp
        MultiObjOpt/Optimizer/Problems/TTP/TTPReader.h
        MultiObjOpt/Optimizer/Problems/ZDT/ProblemZDT.cpp
        MultiObjOpt/Optimizer/Problems/ZDT/ProblemZDT.h
        MultiObjOpt/Optimizer/Problems/ZDT/ZDTParams.h
        MultiObjOpt/Optimizer/Problems/ZDT/ZDTReader.cpp
        MultiObjOpt/Optimizer/Problems/ZDT/ZDTReader.h
        MultiObjOpt/Optimizer/Problems/Problem.h
        MultiObjOpt/Optimizer/Problems/ProblemEncoding.h
        MultiObjOpt/Optimizer/Program/Program.cpp
        MultiObjOpt/Optimizer/Program/Program.h
        MultiObjOpt/Optimizer/Program/ProgramParams.h
        MultiObjOpt/Optimizer/Utils/Common.h
        MultiObjOpt/Optimizer/Utils/DasDennis.cpp
        MultiObjOpt/Optimizer/Utils/DasDennis.h
        MultiObjOpt/Optimizer/Utils/Random.cpp
        MultiObjOpt/Optimizer/Utils/Random.h
        MultiObjOpt/Optimizer/Utils/ReadUtils.cpp
        MultiObjOpt/Optimizer/Utils/ReadUtils.h
        MultiObjOpt/Optimizer/main.cpp
        MultiObjOpt/Optimizer/Optimizer.vcxproj
        MultiObjOpt/Optimizer/Optimizer.vcxproj.filters
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/RandomAlgorithm.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/RandomAlgorithm.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Solution/Solution.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Solution/Solution.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/SimulatedAnnealing.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/SingleObjectiveOptimizers/SimulatedAnnealing.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Swap.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Swap.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/OwnMutationOperator.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/OwnMutationOperator.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Inverse.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/Operators/Mutation_Inverse.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterGA.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterGA.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterSA.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterSA.h
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterRandom.cpp
        MultiObjOpt/Optimizer/Optimizers/EvolutionaryAlgorithms/ResultWriter/ResultsWriterRandom.h
)
